2015-06-09 Richard Larsson  <ric.larsson@gmail.com>

	* arts-2-3-231
	
	Reverting some files by Patrick's advice.
	
	* src/agendas.cc: Reverting iy_main_agenda to not take 
	t_nlte_field. Changed all other code back to previous executing 
	style.
	
	* controlfiles/artscomponents/surface/TestSurface.arts:
	Now touch t_nlte_field.
	
	* src/m_cloudradar.cc,src/m_doit.cc,src/m_jacobian.cc,
	src/m_rte.cc,src/m_surface.cc:  No more dummy t_nlte_field.
	
	* src/methods.cc:  No t_nlte_field in yCalc and iyCalc.
	
	* src/rte.{cc,h}:  So get_iy, iyb_calc, and iyb_calc_body
	no longer has t_nlte_field as input.

2015-06-09  Jana Mendrok  <jana.mendrok@ltu.se>

	* arts-2-3-230

	* src/m_cloudbox.cc (ScatteringParticleTypeAndMetaRead):
	Removed spurious cout.

	* controlfiles/artscomponents/doitbatch/TestDOITBatch.arts,
	controlfiles/artscomponents/doit/TestDOITFromIndividualFields.arts:
	Minor clean up.

2015-06-09 Richard Larsson  <ric.larsson@gmail.com>

	* arts-2-3-229
	
	* src/absorption.cc:  Changed how non-resonant O2 is handled.
	Now the method follows from the Debye lineshape approximating
	VVW/2 line shape.
	
	* src/linemixingdata.{cc,h}:  Adapted tag.  This could break
	old Artscat5 files but the physics is better.  LM NR -0.5
	now adapts VVW line shape to VVW/2 for the non-resonant
	line/band of AER's catalog.
	
	* src/lineshapes.cc:  Added comment that the lineshape for
	O2 non-resonant is not used and should not be used.  Should
	it be removed?

2015-06-09  Oliver Lemke  <olemke@core-dump.info>

	* arts-2-3-228

	* controlfiles/artscomponents/arts-xml-data/TestSurf_Earth.arts,
	controlfiles/artscomponents/helpers/TestRegridding.arts:

	Adapt ERA40 path for restructured arts-xml-data.

2015-06-09  Jana Mendrok  <jana.mendrok@ltu.se>

	* arts-2-3-227

	* m_cloudbox.cc, methods.cc (ScatteringParticleTypeAndMetaRead):
	Pass scat_data locations as ArrayOfString instead of in a file. Derive
	meta data location from scat_data location applying naming convention