@@ -1,3 +1,10 @@
+2015-06-10 Richard Larsson  <ric.larsson@gmail.com>
+
+	* arts-2-3-232
+	
+	* src/quantum.{h,cc}, src/linerecord.cc:  Added and changed some
+	quantum number names to be consistent with HITRAN.
+
 2015-06-09 Richard Larsson  <ric.larsson@gmail.com>
 
 	* arts-2-3-231
